tests/mvar/reject/string_concat.nos
# expect: error
# String mvar with unsafe pattern

mvar log: String = ""

append(msg) = {
    log = log ++ msg
    log
}

log_and_get() = {
    # UNSAFE: calls append which writes log, then reads log
    append("hello")
    log
}

main() = {
    log_and_get()
}
